--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="src/style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,31 +15,40 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-              alt="Cloudly"
-            />
-            12°C | °F
-          </div>
-          <div class="col-6">
+      <div class="weather-app=wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>New York</h1>
             <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 7%</li>
-              <li>WindL 2km/h</li>
+              <li>Friday 05:00</li>
+              <li>Clear</li>
             </ul>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+                  alt="Cloudly"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>12</strong>
+                  <small class="units">°C | °F</small>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 7%</li>
+                <li>Wind: 2km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
+        <small>Karolina Hamerszmidt </small>
       </div>
-
-      <small>Karolina Hamerszmidt </small>
     </div>
     <script src="src/app.js"></script>
   </body>
