--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 <img src="" alt="Cloudly" class="float-left" id="icon" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
-                  <small class="units">°C | °F</small>
+                  <small class="units"><a href="#" id="celsius-link" class="active">°C</a> | 
+                    <a href="#" id="fahrenheit-link">°F</a></small>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: 0%</li>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span>km/h</li>
               </ul>
