--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app=wrapper">
+      <div class="weather-app-wrapper">
         <div class="weather-app">
           <form id="search-form" class="mb-3">
               <div class="row">
@@ -61,7 +61,10 @@
             </div>
           </div>
         </div>
-        <small>Karolina Hamerszmidt </small>
+        <small> 
+          <a class="open-source" href="https://github.com/karolinahamerszmidt/weather-search"
+          target="_blank"
+          >Open-source code</a> by Karolina Hamerszmidt </small>
       </div>
     </div>
     <script src="src/app.js"></script>
