--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast" id="forecast">
+            
+          </div>
         </div>
         <small> 
           <a class="open-source" href="https://github.com/karolinahamerszmidt/weather-search"
